--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,21 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
-    <div class="main-wrapper">
-        <app-root></app-root>
-    </div>
+<body class="main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar">
+  <app-root class="kendodialog"></app-root>
+  <div class="loading none">
+      <div id="loader-wrapper">
+          <div id="loader"></div>
+          <div class="loader-section section-left"></div>
+          <div class="loader-section section-right"></div>
+          <div class="textLoading"><strong>Loading..</strong><span>Please wait</span></div>
+      </div>
+
+  </div>
+  <div class="zloader"></div>
+  <!-- <app-root></app-root> -->
 </body>
+
+
 
 </html>
