--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="loaded mat-typography skin-blue sidebar-mini u-fancy-scrollbar login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar">
+<body class="login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar">
   <app-root class="kendodialog"></app-root>
   <div class="loading none">
       <div id="loader-wrapper">
@@ -26,7 +26,6 @@
 
   </div>
   <div class="zloader"></div>
-  <!-- <app-root></app-root> -->
 </body>
 
 
