--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar">
+<body class="login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar" style="height: auto;min-height: 100%;">
   <app-root class="kendodialog"></app-root>
   <div class="loading none">
       <div id="loader-wrapper">
