--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body class="login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar" style="height: auto;min-height: 100%;">
   <app-root class="kendodialog"></app-root>
   <div class="loading none">
-      <div id="loader-wrapper">
+      <div>
           <div id="loader"></div>
           <div class="loader-section section-left"></div>
           <div class="loader-section section-right"></div>
