--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
 </head>
 
 <body class="login-page main-wrapper loaded mat-typography hold-transition skin-blue sidebar-mini u-fancy-scrollbar" style="height: auto;min-height: 100%;">
-  <app-root class="kendodialog"></app-root>
+  <div class="main-wrapper">
+      <app-root class="kendodialog"></app-root>
+  </div>
   <div class="loading none">
       <div>
           <div id="loader"></div>
